# id3-rw

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  index.html  package_index_js.js  src_analysing-your-whole-music-library_index_js.js  src_for-testing_index_js.js  src_id3-editor_index_js.js
.github/workflows/: gh-pages.yml  test.yml
analysing-your-whole-music-library/: bootstrap.js  index.html  style.css
docs/: index.html  modules.html
docs/assets/js/: search.js
docs/classes/: albumcovermetadatum.html  commentmetadatum.html  extendedtextmetadatum.html  metadata.html  tagcontroller.html
for-testing/: bootstrap.js  index.html
id3-editor/: bootstrap.js
package/: .eslintrc.js  .gitignore  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
patches/rust-id3/src/: error.rs  tag.rs
patches/rust-id3/src/stream/: tag.rs
scripts/: build.sh  test.sh
src/: lib.rs
www/: .eslintrc.js  jest-puppeteer.config.js  jest.config.js  package-lock.json  package.json  webpack.config.js
www/__tests__/: id3-editor.js
www/src/: index.html
www/src/analysing-your-whole-music-library/: index.js  style.css
www/src/for-testing/: bootstrap.js  index.js
www/src/id3-editor/: index.html  index.js  style.css
www/tests/: .eslintrc.js  id3-editor.test.js  readme.test.js  utils.js
